syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment;

import "Protos/IT/WebServices/Fragments/Errors.proto";

message PaymentError {
    PaymentErrorReason Type = 1;
    string Message = 2;
    repeated IT.WebServices.Fragments.ValidationIssue Validation = 3;
}

enum PaymentErrorReason {
    PAYMENT_REASON_UNSPECIFIED = 0;
    
    // Subscription Operations 100-199
    CANCEL_SUBSCRIPTION_ERROR_NOT_FOUND = 100;
    CANCEL_SUBSCRIPTION_ERROR_UNAUTHORIZED = 101;
    CANCEL_SUBSCRIPTION_ERROR_ALREADY_CANCELED = 102;
    CANCEL_SUBSCRIPTION_ERROR_UNKNOWN = 149;
    
    GET_SUBSCRIPTION_ERROR_NOT_FOUND = 150;
    GET_SUBSCRIPTION_ERROR_UNAUTHORIZED = 151;
    GET_SUBSCRIPTION_ERROR_UNKNOWN = 169;
    
    RECONCILE_SUBSCRIPTION_ERROR_NOT_FOUND = 170;
    RECONCILE_SUBSCRIPTION_ERROR_UNAUTHORIZED = 171;
    RECONCILE_SUBSCRIPTION_ERROR_PROVIDER_ERROR = 172;
    RECONCILE_SUBSCRIPTION_ERROR_UNKNOWN = 189;
    
    // One-Time Payment Operations 200-299
    GET_PAYMENT_ERROR_NOT_FOUND = 200;
    GET_PAYMENT_ERROR_UNAUTHORIZED = 201;
    GET_PAYMENT_ERROR_UNKNOWN = 249;
    
    // New Payment Setup 300-399
    GET_NEW_DETAILS_ERROR_INVALID_LEVEL = 300;
    GET_NEW_DETAILS_ERROR_PROVIDER_ERROR = 301;
    GET_NEW_DETAILS_ERROR_UNKNOWN = 349;
    
    GET_NEW_ONETIME_ERROR_INVALID_REQUEST = 350;
    GET_NEW_ONETIME_ERROR_PROVIDER_ERROR = 351;
    GET_NEW_ONETIME_ERROR_UNKNOWN = 369;
    
    // Admin Operations 400-499
    ADMIN_BULK_ACTION_ERROR_UNAUTHORIZED = 400;
    ADMIN_BULK_ACTION_ERROR_INVALID_ACTION = 401;
    ADMIN_BULK_ACTION_ERROR_UNKNOWN = 449;
    
    // Generic 900-999
    PAYMENT_ERROR_SERVICE_OFFLINE = 900;
    PAYMENT_ERROR_VALIDATION_FAILED = 901;
    PAYMENT_ERROR_UNAUTHORIZED = 902;
    PAYMENT_ERROR_PROVIDER_UNAVAILABLE = 903;
    PAYMENT_ERROR_UNKNOWN = 999;
}